testdata/baselines/reference/submodule/conformance/moduleResolutionWithoutExtension5.errors.txt
/src/buzz.mts(2,8): error TS2307: Cannot find module './foo' or its corresponding type declarations.


==== /src/buzz.mts (1 errors) ====
    // Extensionless relative path dynamic import in an ES module
    import("./foo").then(x => x); // should error, ask for extension
           ~~~~~~~
!!! error TS2307: Cannot find module './foo' or its corresponding type declarations.